<resources>

    <string name="app_name">108 Parshvanath Temples</string>

    //Navigation Drawer
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header">Welcome to the 108 Parshvanath Temples</string>
    <string name="nav_header_desc">Navigation header</string>

    //menu/main.xml
    <string name="search">Search</string>
    <string name="temples_near_you">Nearby Temples</string>

    //menu/nearby_places.xml
    <string name="back">Go Back</string>

    //activity_main_drawer.xml
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="store">View on Play Store</string>
    <string name="about_us">About Us</string>
    <string name="nearby_places">Nearby Places</string>

    //list_item.xml
    <string name="templeImage">Temple Image</string>

    //activity_temple_place.xml
    <string name="templeName">Temple Name</string>
    <string name="templeAddress">Temple Address</string>
    <string name="map_button">View on Map</string>

    //activity_nearby_places.xml
    <string name="places_within_50km">Temples Within 50km radius</string>
    <string name="no_nearby_temples_found">No Nearby Temples Found</string>

</resources>
