<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/communicate">

        <menu>

            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />

            <item
                android:id="@+id/nav_store"
                android:icon="@drawable/ic_play_arrow_black_24dp"
                android:title="@string/store" />

            <item
                android:id="@+id/nav_about_us"
                android:icon="@drawable/ic_person_black_24dp"
                android:title="@string/about_us"/>

        </menu>

    </item>

</menu>
